--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "recharts": "^2.15.4",
     "root": "git+https://github.com/tanstack/react-query.git",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
