--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "root": "git+https://github.com/tanstack/react-query.git",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.0.14"
+    "zod": "^4.0.14",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
