--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.536.0",
-    "next": "16.0.0",
+    "next": "16.0.10",
     "next-themes": "^0.4.6",
+    "pnpm": "^10.26.1",
     "react": "19.2.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "19.2.0",
@@ -45,7 +46,6 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/jspdf": "^2.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
