--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "recharts": "^2.15.4",
     "root": "git+https://github.com/tanstack/react-query.git",
     "sonner": "^2.0.7",
+    "styled-jsx": "^5.1.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.14",
     "zustand": "^5.0.8"
